Parsing SPARQL/SPARQLGrammar.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.0 from .\SPARQLGrammar.y
-----------------------------------------------------------------------------


terminal IMPORT is unused
terminal AS is unused
terminal SELECT is unused
terminal GROUP is unused
terminal ORDER is unused
terminal BY is unused
terminal fileVar is unused
terminal '.' is unused
terminal '<' is unused
terminal '>' is unused
terminal '=' is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parseSPARQL -> Decleration                  (0)
	Decleration -> BASE URIValue Prefixes Exp          (1)
	Decleration -> BASE URIValue Exp                   (2)
	Decleration -> Prefixes Exp                        (3)
	Decleration -> Exp                                 (4)
	Prefixes -> Prefixes ',' Prefixes                  (5)
	Prefixes -> PREFIX PrefixName ':' URIValue         (6)
	Exp -> Exp UNION Exp                               (7)
	Exp -> CONSTRUCT '{' GenerateTriple '}' DataProposition WHERE '{' WhereProposition '}'   (8)
	DataProposition -> DataProposition ',' DataProposition   (9)
	DataProposition -> FROM file                       (10)
	WhereProposition -> WhereBracket Filter            (11)
	WhereProposition -> WhereBracket                   (12)
	Filter -> FILTER '(' BooleanOperation ')'          (13)
	Filter -> FILTER ASK '{' DataProposition WHERE '{' WhereProposition '}' '}'   (14)
	Filter -> FILTER regex '(' Variable ',' StringValue ')'   (15)
	BooleanOperation -> Variable '==' BooleanTerm      (16)
	BooleanOperation -> Variable '!=' BooleanTerm      (17)
	BooleanTerm -> URI or BooleanTerm                  (18)
	BooleanTerm -> URI and BooleanTerm                 (19)
	BooleanTerm -> URI                                 (20)
	GenerateTriple -> GenerateTriple ',' GenerateTriple   (21)
	GenerateTriple -> SubTerm SubTerm ObjExp           (22)
	WhereBracket -> SubTerm SubTerm Obj                (23)
	Obj -> URI                                         (24)
	Obj -> StringValue                                 (25)
	Obj -> Variable                                    (26)
	Obj -> true                                        (27)
	Obj -> false                                       (28)
	ObjExp -> IntExps                                  (29)
	ObjExp -> '!' Variable                             (30)
	ObjExp -> Obj                                      (31)
	SubTerm -> Variable                                (32)
	SubTerm -> URI                                     (33)
	IntExps -> Variable '+' Integer                    (34)
	IntExps -> Variable '*' Integer                    (35)
	IntExps -> Variable '//' Integer                   (36)
	IntExps -> Variable '-' Integer                    (37)
	URI -> PrefixName ':' Tag                          (38)
	URI -> URIValue                                    (39)
	URI -> BaseURI1                                    (40)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	CONSTRUCT      { TokenConstructQuery _ }
	PREFIX         { TokenPrefixDecl _ }
	BASE           { TokenBaseDecl _ }
	ASK            { TokenAskQuery _ }
	UNION          { TokenGroupPattern _ }
	WHERE          { TokenWhere _ }
	FILTER         { TokenFilter _ }
	IMPORT         { TokenImport _ }
	AS             { TokenAs _ }
	SELECT         { TokenSelectClause _ }
	FROM           { TokenFrom _ }
	GROUP          { TokenGroup _ }
	ORDER          { TokenOrder _ }
	BY             { TokenDoBy _ }
	regex          { TokenRegex _ }
	'{'            { TokenOpenBracket _ }
	'}'            { TokenCloseBracket _ }
	'('            { TokenOpenParen _ }
	')'            { TokenCloseParen _ }
	Variable       { TokenVar _ $$ }
	file           { TokenFileName _ $$ }
	fileVar        { TokenFileVar _ $$ }
	true           { TokenBoolean _ True }
	false          { TokenBoolean _ False }
	','            { TokenComma _ }
	'.'            { TokenDot _ }
	':'            { TokenColon _ }
	'=='           { TokenCmpr _ }
	'!='           { TokenNeq _ }
	'!'            { TokenNot _ }
	or             { TokenOr _ }
	and            { TokenAnd _ }
	'+'            { TokenPlus _ }
	'*'            { TokenMulti _ }
	'-'            { TokenSub _ }
	'//'           { TokenDiv _ }
	'<'            { TokenLT _ }
	'>'            { TokenGT _ }
	'='            { TokenEq _ }
	Integer        { TokenInt _ $$ }
	PrefixName     { TokenPrefixName _ $$ }
	Tag            { TokenTag _ $$ }
	BaseURI1       { TokenBaseURI _ $$ }
	URIValue       { TokenURI _ $$ }
	StringValue    { TokenString _ $$ }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parseSPARQL rule  0
	Decleration     rules 1, 2, 3, 4
	Prefixes        rules 5, 6
	Exp             rules 7, 8
	DataProposition rules 9, 10
	WhereProposition rules 11, 12
	Filter          rules 13, 14, 15
	BooleanOperation rules 16, 17
	BooleanTerm     rules 18, 19, 20
	GenerateTriple  rules 21, 22
	WhereBracket    rule  23
	Obj             rules 24, 25, 26, 27, 28
	ObjExp          rules 29, 30, 31
	SubTerm         rules 32, 33
	IntExps         rules 34, 35, 36, 37
	URI             rules 38, 39, 40

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_parseSPARQL -> . Decleration                 (rule 0)

	CONSTRUCT      shift, and enter state 6
	PREFIX         shift, and enter state 7
	BASE           shift, and enter state 8

	Decleration    goto state 3
	Prefixes       goto state 4
	Exp            goto state 5

State 1

	Decleration -> . BASE URIValue Prefixes Exp         (rule 1)

	BASE           shift, and enter state 2


State 2

	Decleration -> BASE . URIValue Prefixes Exp         (rule 1)

	URIValue       shift, and enter state 15


State 3

	%start_parseSPARQL -> Decleration .                 (rule 0)

	%eof           accept


State 4

	Decleration -> Prefixes . Exp                       (rule 3)
	Prefixes -> Prefixes . ',' Prefixes                 (rule 5)

	CONSTRUCT      shift, and enter state 6
	','            shift, and enter state 14

	Exp            goto state 13

State 5

	Decleration -> Exp .                                (rule 4)
	Exp -> Exp . UNION Exp                              (rule 7)

	UNION          shift, and enter state 12
	%eof           reduce using rule 4


State 6

	Exp -> CONSTRUCT . '{' GenerateTriple '}' DataProposition WHERE '{' WhereProposition '}'    (rule 8)

	'{'            shift, and enter state 11


State 7

	Prefixes -> PREFIX . PrefixName ':' URIValue        (rule 6)

	PrefixName     shift, and enter state 10


State 8

	Decleration -> BASE . URIValue Prefixes Exp         (rule 1)
	Decleration -> BASE . URIValue Exp                  (rule 2)

	URIValue       shift, and enter state 9


State 9

	Decleration -> BASE URIValue . Prefixes Exp         (rule 1)
	Decleration -> BASE URIValue . Exp                  (rule 2)

	CONSTRUCT      shift, and enter state 6
	PREFIX         shift, and enter state 7

	Prefixes       goto state 16
	Exp            goto state 27

State 10

	Prefixes -> PREFIX PrefixName . ':' URIValue        (rule 6)

	':'            shift, and enter state 26


State 11

	Exp -> CONSTRUCT '{' . GenerateTriple '}' DataProposition WHERE '{' WhereProposition '}'    (rule 8)

	Variable       shift, and enter state 22
	PrefixName     shift, and enter state 23
	BaseURI1       shift, and enter state 24
	URIValue       shift, and enter state 25

	GenerateTriple goto state 19
	SubTerm        goto state 20
	URI            goto state 21

State 12

	Exp -> Exp UNION . Exp                              (rule 7)

	CONSTRUCT      shift, and enter state 6

	Exp            goto state 18

State 13

	Decleration -> Prefixes Exp .                       (rule 3)
	Exp -> Exp . UNION Exp                              (rule 7)

	UNION          shift, and enter state 12
	%eof           reduce using rule 3


State 14

	Prefixes -> Prefixes ',' . Prefixes                 (rule 5)

	PREFIX         shift, and enter state 7

	Prefixes       goto state 17

State 15

	Decleration -> BASE URIValue . Prefixes Exp         (rule 1)

	PREFIX         shift, and enter state 7

	Prefixes       goto state 16

State 16

	Decleration -> BASE URIValue Prefixes . Exp         (rule 1)
	Prefixes -> Prefixes . ',' Prefixes                 (rule 5)

	CONSTRUCT      shift, and enter state 6
	','            shift, and enter state 14

	Exp            goto state 33

State 17

	Prefixes -> Prefixes . ',' Prefixes                 (rule 5)
	Prefixes -> Prefixes ',' Prefixes .                 (rule 5)

	CONSTRUCT      reduce using rule 5
	','            reduce using rule 5


State 18

	Exp -> Exp . UNION Exp                              (rule 7)
	Exp -> Exp UNION Exp .                              (rule 7)

	UNION          reduce using rule 7
	%eof           reduce using rule 7


State 19

	Exp -> CONSTRUCT '{' GenerateTriple . '}' DataProposition WHERE '{' WhereProposition '}'    (rule 8)
	GenerateTriple -> GenerateTriple . ',' GenerateTriple    (rule 21)

	'}'            shift, and enter state 31
	','            shift, and enter state 32


State 20

	GenerateTriple -> SubTerm . SubTerm ObjExp          (rule 22)

	Variable       shift, and enter state 22
	PrefixName     shift, and enter state 23
	BaseURI1       shift, and enter state 24
	URIValue       shift, and enter state 25

	SubTerm        goto state 30
	URI            goto state 21

State 21

	SubTerm -> URI .                                    (rule 33)

	Variable       reduce using rule 33
	true           reduce using rule 33
	false          reduce using rule 33
	'!'            reduce using rule 33
	PrefixName     reduce using rule 33
	BaseURI1       reduce using rule 33
	URIValue       reduce using rule 33
	StringValue    reduce using rule 33


State 22

	SubTerm -> Variable .                               (rule 32)

	Variable       reduce using rule 32
	true           reduce using rule 32
	false          reduce using rule 32
	'!'            reduce using rule 32
	PrefixName     reduce using rule 32
	BaseURI1       reduce using rule 32
	URIValue       reduce using rule 32
	StringValue    reduce using rule 32


State 23

	URI -> PrefixName . ':' Tag                         (rule 38)

	':'            shift, and enter state 29


State 24

	URI -> BaseURI1 .                                   (rule 40)

	FILTER         reduce using rule 40
	'}'            reduce using rule 40
	')'            reduce using rule 40
	Variable       reduce using rule 40
	true           reduce using rule 40
	false          reduce using rule 40
	','            reduce using rule 40
	'!'            reduce using rule 40
	or             reduce using rule 40
	and            reduce using rule 40
	PrefixName     reduce using rule 40
	BaseURI1       reduce using rule 40
	URIValue       reduce using rule 40
	StringValue    reduce using rule 40


State 25

	URI -> URIValue .                                   (rule 39)

	FILTER         reduce using rule 39
	'}'            reduce using rule 39
	')'            reduce using rule 39
	Variable       reduce using rule 39
	true           reduce using rule 39
	false          reduce using rule 39
	','            reduce using rule 39
	'!'            reduce using rule 39
	or             reduce using rule 39
	and            reduce using rule 39
	PrefixName     reduce using rule 39
	BaseURI1       reduce using rule 39
	URIValue       reduce using rule 39
	StringValue    reduce using rule 39


State 26

	Prefixes -> PREFIX PrefixName ':' . URIValue        (rule 6)

	URIValue       shift, and enter state 28


State 27

	Decleration -> BASE URIValue Exp .                  (rule 2)
	Exp -> Exp . UNION Exp                              (rule 7)

	UNION          shift, and enter state 12
	%eof           reduce using rule 2


State 28

	Prefixes -> PREFIX PrefixName ':' URIValue .        (rule 6)

	CONSTRUCT      reduce using rule 6
	','            reduce using rule 6


State 29

	URI -> PrefixName ':' . Tag                         (rule 38)

	Tag            shift, and enter state 46


State 30

	GenerateTriple -> SubTerm SubTerm . ObjExp          (rule 22)

	Variable       shift, and enter state 41
	true           shift, and enter state 42
	false          shift, and enter state 43
	'!'            shift, and enter state 44
	PrefixName     shift, and enter state 23
	BaseURI1       shift, and enter state 24
	URIValue       shift, and enter state 25
	StringValue    shift, and enter state 45

	Obj            goto state 37
	ObjExp         goto state 38
	IntExps        goto state 39
	URI            goto state 40

State 31

	Exp -> CONSTRUCT '{' GenerateTriple '}' . DataProposition WHERE '{' WhereProposition '}'    (rule 8)

	FROM           shift, and enter state 36

	DataPropositiongoto state 35

State 32

	GenerateTriple -> GenerateTriple ',' . GenerateTriple    (rule 21)

	Variable       shift, and enter state 22
	PrefixName     shift, and enter state 23
	BaseURI1       shift, and enter state 24
	URIValue       shift, and enter state 25

	GenerateTriple goto state 34
	SubTerm        goto state 20
	URI            goto state 21

State 33

	Decleration -> BASE URIValue Prefixes Exp .         (rule 1)
	Exp -> Exp . UNION Exp                              (rule 7)

	UNION          shift, and enter state 12
	%eof           reduce using rule 1


State 34

	GenerateTriple -> GenerateTriple . ',' GenerateTriple    (rule 21)
	GenerateTriple -> GenerateTriple ',' GenerateTriple .    (rule 21)

	'}'            reduce using rule 21
	','            reduce using rule 21


State 35

	Exp -> CONSTRUCT '{' GenerateTriple '}' DataProposition . WHERE '{' WhereProposition '}'    (rule 8)
	DataProposition -> DataProposition . ',' DataProposition    (rule 9)

	WHERE          shift, and enter state 53
	','            shift, and enter state 54


State 36

	DataProposition -> FROM . file                      (rule 10)

	file           shift, and enter state 52


State 37

	ObjExp -> Obj .                                     (rule 31)

	'}'            reduce using rule 31
	','            reduce using rule 31


State 38

	GenerateTriple -> SubTerm SubTerm ObjExp .          (rule 22)

	'}'            reduce using rule 22
	','            reduce using rule 22


State 39

	ObjExp -> IntExps .                                 (rule 29)

	'}'            reduce using rule 29
	','            reduce using rule 29


State 40

	Obj -> URI .                                        (rule 24)

	FILTER         reduce using rule 24
	'}'            reduce using rule 24
	','            reduce using rule 24


State 41

	Obj -> Variable .                                   (rule 26)
	IntExps -> Variable . '+' Integer                   (rule 34)
	IntExps -> Variable . '*' Integer                   (rule 35)
	IntExps -> Variable . '//' Integer                  (rule 36)
	IntExps -> Variable . '-' Integer                   (rule 37)

	'}'            reduce using rule 26
	','            reduce using rule 26
	'+'            shift, and enter state 48
	'*'            shift, and enter state 49
	'-'            shift, and enter state 50
	'//'           shift, and enter state 51


State 42

	Obj -> true .                                       (rule 27)

	FILTER         reduce using rule 27
	'}'            reduce using rule 27
	','            reduce using rule 27


State 43

	Obj -> false .                                      (rule 28)

	FILTER         reduce using rule 28
	'}'            reduce using rule 28
	','            reduce using rule 28


State 44

	ObjExp -> '!' . Variable                            (rule 30)

	Variable       shift, and enter state 47


State 45

	Obj -> StringValue .                                (rule 25)

	FILTER         reduce using rule 25
	'}'            reduce using rule 25
	','            reduce using rule 25


State 46

	URI -> PrefixName ':' Tag .                         (rule 38)

	FILTER         reduce using rule 38
	'}'            reduce using rule 38
	')'            reduce using rule 38
	Variable       reduce using rule 38
	true           reduce using rule 38
	false          reduce using rule 38
	','            reduce using rule 38
	'!'            reduce using rule 38
	or             reduce using rule 38
	and            reduce using rule 38
	PrefixName     reduce using rule 38
	BaseURI1       reduce using rule 38
	URIValue       reduce using rule 38
	StringValue    reduce using rule 38


State 47

	ObjExp -> '!' Variable .                            (rule 30)

	'}'            reduce using rule 30
	','            reduce using rule 30


State 48

	IntExps -> Variable '+' . Integer                   (rule 34)

	Integer        shift, and enter state 60


State 49

	IntExps -> Variable '*' . Integer                   (rule 35)

	Integer        shift, and enter state 59


State 50

	IntExps -> Variable '-' . Integer                   (rule 37)

	Integer        shift, and enter state 58


State 51

	IntExps -> Variable '//' . Integer                  (rule 36)

	Integer        shift, and enter state 57


State 52

	DataProposition -> FROM file .                      (rule 10)

	WHERE          reduce using rule 10
	','            reduce using rule 10


State 53

	Exp -> CONSTRUCT '{' GenerateTriple '}' DataProposition WHERE . '{' WhereProposition '}'    (rule 8)

	'{'            shift, and enter state 56


State 54

	DataProposition -> DataProposition ',' . DataProposition    (rule 9)

	FROM           shift, and enter state 36

	DataPropositiongoto state 55

State 55

	DataProposition -> DataProposition . ',' DataProposition    (rule 9)
	DataProposition -> DataProposition ',' DataProposition .    (rule 9)

	WHERE          reduce using rule 9
	','            reduce using rule 9


State 56

	Exp -> CONSTRUCT '{' GenerateTriple '}' DataProposition WHERE '{' . WhereProposition '}'    (rule 8)

	Variable       shift, and enter state 22
	PrefixName     shift, and enter state 23
	BaseURI1       shift, and enter state 24
	URIValue       shift, and enter state 25

	WherePropositiongoto state 61
	WhereBracket   goto state 62
	SubTerm        goto state 63
	URI            goto state 21

State 57

	IntExps -> Variable '//' Integer .                  (rule 36)

	'}'            reduce using rule 36
	','            reduce using rule 36


State 58

	IntExps -> Variable '-' Integer .                   (rule 37)

	'}'            reduce using rule 37
	','            reduce using rule 37


State 59

	IntExps -> Variable '*' Integer .                   (rule 35)

	'}'            reduce using rule 35
	','            reduce using rule 35


State 60

	IntExps -> Variable '+' Integer .                   (rule 34)

	'}'            reduce using rule 34
	','            reduce using rule 34


State 61

	Exp -> CONSTRUCT '{' GenerateTriple '}' DataProposition WHERE '{' WhereProposition . '}'    (rule 8)

	'}'            shift, and enter state 67


State 62

	WhereProposition -> WhereBracket . Filter           (rule 11)
	WhereProposition -> WhereBracket .                  (rule 12)

	FILTER         shift, and enter state 66
	'}'            reduce using rule 12

	Filter         goto state 65

State 63

	WhereBracket -> SubTerm . SubTerm Obj               (rule 23)

	Variable       shift, and enter state 22
	PrefixName     shift, and enter state 23
	BaseURI1       shift, and enter state 24
	URIValue       shift, and enter state 25

	SubTerm        goto state 64
	URI            goto state 21

State 64

	WhereBracket -> SubTerm SubTerm . Obj               (rule 23)

	Variable       shift, and enter state 72
	true           shift, and enter state 42
	false          shift, and enter state 43
	PrefixName     shift, and enter state 23
	BaseURI1       shift, and enter state 24
	URIValue       shift, and enter state 25
	StringValue    shift, and enter state 45

	Obj            goto state 71
	URI            goto state 40

State 65

	WhereProposition -> WhereBracket Filter .           (rule 11)

	'}'            reduce using rule 11


State 66

	Filter -> FILTER . '(' BooleanOperation ')'         (rule 13)
	Filter -> FILTER . ASK '{' DataProposition WHERE '{' WhereProposition '}' '}'    (rule 14)
	Filter -> FILTER . regex '(' Variable ',' StringValue ')'    (rule 15)

	ASK            shift, and enter state 68
	regex          shift, and enter state 69
	'('            shift, and enter state 70


State 67

	Exp -> CONSTRUCT '{' GenerateTriple '}' DataProposition WHERE '{' WhereProposition '}' .    (rule 8)

	UNION          reduce using rule 8
	%eof           reduce using rule 8


State 68

	Filter -> FILTER ASK . '{' DataProposition WHERE '{' WhereProposition '}' '}'    (rule 14)

	'{'            shift, and enter state 76


State 69

	Filter -> FILTER regex . '(' Variable ',' StringValue ')'    (rule 15)

	'('            shift, and enter state 75


State 70

	Filter -> FILTER '(' . BooleanOperation ')'         (rule 13)

	Variable       shift, and enter state 74

	BooleanOperationgoto state 73

State 71

	WhereBracket -> SubTerm SubTerm Obj .               (rule 23)

	FILTER         reduce using rule 23
	'}'            reduce using rule 23


State 72

	Obj -> Variable .                                   (rule 26)

	FILTER         reduce using rule 26
	'}'            reduce using rule 26


State 73

	Filter -> FILTER '(' BooleanOperation . ')'         (rule 13)

	')'            shift, and enter state 81


State 74

	BooleanOperation -> Variable . '==' BooleanTerm     (rule 16)
	BooleanOperation -> Variable . '!=' BooleanTerm     (rule 17)

	'=='           shift, and enter state 79
	'!='           shift, and enter state 80


State 75

	Filter -> FILTER regex '(' . Variable ',' StringValue ')'    (rule 15)

	Variable       shift, and enter state 78


State 76

	Filter -> FILTER ASK '{' . DataProposition WHERE '{' WhereProposition '}' '}'    (rule 14)

	FROM           shift, and enter state 36

	DataPropositiongoto state 77

State 77

	DataProposition -> DataProposition . ',' DataProposition    (rule 9)
	Filter -> FILTER ASK '{' DataProposition . WHERE '{' WhereProposition '}' '}'    (rule 14)

	WHERE          shift, and enter state 86
	','            shift, and enter state 54


State 78

	Filter -> FILTER regex '(' Variable . ',' StringValue ')'    (rule 15)

	','            shift, and enter state 85


State 79

	BooleanOperation -> Variable '==' . BooleanTerm     (rule 16)

	PrefixName     shift, and enter state 23
	BaseURI1       shift, and enter state 24
	URIValue       shift, and enter state 25

	BooleanTerm    goto state 84
	URI            goto state 83

State 80

	BooleanOperation -> Variable '!=' . BooleanTerm     (rule 17)

	PrefixName     shift, and enter state 23
	BaseURI1       shift, and enter state 24
	URIValue       shift, and enter state 25

	BooleanTerm    goto state 82
	URI            goto state 83

State 81

	Filter -> FILTER '(' BooleanOperation ')' .         (rule 13)

	'}'            reduce using rule 13


State 82

	BooleanOperation -> Variable '!=' BooleanTerm .     (rule 17)

	')'            reduce using rule 17


State 83

	BooleanTerm -> URI . or BooleanTerm                 (rule 18)
	BooleanTerm -> URI . and BooleanTerm                (rule 19)
	BooleanTerm -> URI .                                (rule 20)

	')'            reduce using rule 20
	or             shift, and enter state 89
	and            shift, and enter state 90


State 84

	BooleanOperation -> Variable '==' BooleanTerm .     (rule 16)

	')'            reduce using rule 16


State 85

	Filter -> FILTER regex '(' Variable ',' . StringValue ')'    (rule 15)

	StringValue    shift, and enter state 88


State 86

	Filter -> FILTER ASK '{' DataProposition WHERE . '{' WhereProposition '}' '}'    (rule 14)

	'{'            shift, and enter state 87


State 87

	Filter -> FILTER ASK '{' DataProposition WHERE '{' . WhereProposition '}' '}'    (rule 14)

	Variable       shift, and enter state 22
	PrefixName     shift, and enter state 23
	BaseURI1       shift, and enter state 24
	URIValue       shift, and enter state 25

	WherePropositiongoto state 94
	WhereBracket   goto state 62
	SubTerm        goto state 63
	URI            goto state 21

State 88

	Filter -> FILTER regex '(' Variable ',' StringValue . ')'    (rule 15)

	')'            shift, and enter state 93


State 89

	BooleanTerm -> URI or . BooleanTerm                 (rule 18)

	PrefixName     shift, and enter state 23
	BaseURI1       shift, and enter state 24
	URIValue       shift, and enter state 25

	BooleanTerm    goto state 92
	URI            goto state 83

State 90

	BooleanTerm -> URI and . BooleanTerm                (rule 19)

	PrefixName     shift, and enter state 23
	BaseURI1       shift, and enter state 24
	URIValue       shift, and enter state 25

	BooleanTerm    goto state 91
	URI            goto state 83

State 91

	BooleanTerm -> URI and BooleanTerm .                (rule 19)

	')'            reduce using rule 19


State 92

	BooleanTerm -> URI or BooleanTerm .                 (rule 18)

	')'            reduce using rule 18


State 93

	Filter -> FILTER regex '(' Variable ',' StringValue ')' .    (rule 15)

	'}'            reduce using rule 15


State 94

	Filter -> FILTER ASK '{' DataProposition WHERE '{' WhereProposition . '}' '}'    (rule 14)

	'}'            shift, and enter state 95


State 95

	Filter -> FILTER ASK '{' DataProposition WHERE '{' WhereProposition '}' . '}'    (rule 14)

	'}'            shift, and enter state 96


State 96

	Filter -> FILTER ASK '{' DataProposition WHERE '{' WhereProposition '}' '}' .    (rule 14)

	'}'            reduce using rule 14


-----------------------------------------------------------------------------
Grammar Totals
-----------------------------------------------------------------------------
Number of rules: 41
Number of terminals: 45
Number of non-terminals: 16
Number of states: 97
